# chess_engine

./: .gitignore  Cargo.toml  README.md  art.txt  output.txt  turn-off-warnings.bash  turn-on-warnings.bash
Benchmarks/: make_unmake.txt  move_gen.txt  perft.txt
GameLogs/: 2021-04-16_200416-output.txt  2021-04-17_183039-output.txt  2021-04-20_215028-output.txt  2021-04-20_220655-output.txt  2021-04-20_222907-output.txt  2021-04-21_195958-output.txt  2021-04-24_190025-output.txt  2021-04-25_123921-output.txt  2021-05-02_182932-output.txt  2021-05-08_120842-output.txt  2021-05-08_134331-output.txt  2021-05-08_184136-output.txt  2021-05-08_184253-output.txt  2021-05-08_210004-output.txt  2021-05-08_210658-output.txt  2021-05-08_210956-output.txt  2021-05-08_212112-output.txt  2021-05-08_212704-output.txt  2021-05-08_212954-output.txt  2021-05-08_213441-output.txt  2021-05-08_213552-output.txt  2021-05-08_215715-output.txt  2021-05-08_222031-output.txt  2021-05-08_224904-output.txt  2021-05-08_232029-output.txt  2021-05-08_232125-output.txt  2021-05-08_233247-output.txt  2022-02-03_015831-output.txt  2022-02-03_024013-output.txt  2022-02-03_041305-output.txt  2022-02-03_041328-output.txt  2022-02-03_044217-output.txt  2022-02-04_171342-output.txt  2022-02-10_201529-output.txt  2022-07-11_162647-output.txt  2026-03-25_145240-output.txt  2026-03-25_154012-output.txt  output.txt
Games/: 1.pgn
docs/: bench.txt  random_info.txt  random_thoughts.txt  search.txt  transposition.txt
src/: AI.rs  Ai.rs  Ai3.rs  bit_board.rs  board.rs  board_console_printer.rs  chess_notation.rs  (+9 more)
(+22 files in other folders)
