[package]
name = "chess_engine"
version = "0.1.0"
authors = ["EricGlover <horatiofox0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
console = "0.14.1"
indicatif = "0.15.0"
dialoguer = "0.8.0"
matrix_display = "1.0.0"
rand = "0.8.3"
regex = "1.4.5"
chrono = "0.4"